fix: unbreak the blogs
and correct font paths

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
 @layer base {
   @font-face {
     font-family: "Poppins";
-    src: url("/fonts/poppins/Poppins-Regular.woff2"), format("woff2");
+    src: url("/fjelltopp-astro/fonts/poppins/Poppins-Regular.woff2"), format("woff2");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -13,7 +13,7 @@
 
   @font-face {
     font-family: "Poppins";
-    src: url("/fonts/poppins/Poppins-Medium.woff2"), format("woff2");
+    src: url("/fjelltopp-astro/fonts/poppins/Poppins-Medium.woff2"), format("woff2");
     font-weight: 500;
     font-style: normal;
     font-display: swap;
